# staticimp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example  healthcheck.sh  staticimp.project.yml  staticimp.sample.json  staticimp.sample.yml
src/: main.rs  nanotemplate.rs  rendertemplate.rs  staticimp.rs
