[package]
name = "staticimp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
openssl = "0.10.55"
#awc = "3.1.1"
awc = { version = "3.1.1", features = [ "openssl" ] }
serde = { version = "1.0.166", features = [ "derive" ] }
serde_json = "1.0.100"
serde_yaml = "0.9.22"
derive_more = "0.99.17"
futures = "0.3.28"
#once_cell = "1.18.0" #needed for global CONFIG
async-trait = "0.1.71" #only needed until async traits are in stable
bytes = "1.4.0"
#url = "2.2.2"
url-escape = "0.1.1"
