[package]
name = "staticimp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
openssl = "0.10.57"
awc = { version = "3.1.1", features = [ "openssl" ] }
serde = { version = "1.0.166", features = [ "derive" ] }
serde_json = "1.0.100"
serde_yaml = "0.9.22"
derive_more = "0.99.17"
futures = "0.3.28"
#once_cell = "1.18.0" #needed for global CONFIG
async-trait = "0.1.71" #only needed until async traits are in stable rust
bytes = "1.4.0"
url = { version = "2.2.2", features = [ "serde" ] }
#gitlab = { version = "0.1601.0", features = [ "futures-util", "async-trait" ] }
gitlab = { version = "0.1601.0", features = [ "async-trait" ] }
#microtemplate = "1.0.3"
uuid = { version = "1.4.0", features = [ "v4" ] }
chrono = "0.4.26"
regex = "1.9.1"
markdown-table = "0.2.0"
slug = "0.1.4"
md5 = "0.7.0"
sha256 = "1.2.2"
parking_lot = "0.12.1"
form_urlencoded = "1.2.0"
serde_urlencoded = "0.7.1"
